--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,132 @@
-.section-title{
-    text-align: center;
-    padding: 20px 0;
+
+/* This is CSS crash course */
+/* *{ 
+    margin:0;
+    padding:0;
+
 }
-
-@media(min-width:468px){
-    .container-1{
-    display: flex;
-    /*
-    align-items: flex-start;
-    align-items: flex-end;
-    align-items: center;
-    flex-direction: column;
-    */
-    }
-    .container-2{
-    display: flex;
-    /*
-    justify-content: flex-start;
-    justify-content: flex-end;
-    justify-content: center;
-    justify-content: space-between;
-    justify-content: space-around;
-    */
-
-
-    justify-content: space-between;            
-
-    }
-
-} 
- .container-3{
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
+*/
+body{
+    background: #f4f4f4;
+    color: #555;
+    /* font-family: Arial, Helvetica, sans-serif; 
+    font-size: 16px;
+    font-weight: normal;*/
+    font: normal 16px Arial, Helvetica, sans-sarif;
+    line-height: 1.6em; 
 }
-.container-1 div, .container-2 div, .container-3 div{
-    border: 1px solid #ccc;
-    padding: 10px;
+a{
+    text-decoration: none;
+    color: #000;
+}
+a:hover{
+    color:red;
+}
+a:active{
+    color:green;
+
+}
+a:visited{
+    color: yellow;
+
+}
+.container{
+    width: 80%;
+    margin: auto; 
 }
 .box-1{
-    flex: 3;
-    order: 2;
+    background-color:#333;
+    color: #fff;
+    padding: 30px;
+    text-align: justify;
+    border: 5px solid red;     
+    padding: 20px;
+    /* 
+    border-top-style:dotted; 
+    border-bottom-width:20px;
+    
+    */
+    /* margin-top: 20px; */
+    margin: 20px 0;
+}
+.box-1 h1{
+    font-family: Tahoma;
+    font-weight: 800px;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 0.1em;  
 
 }
 .box-2{
-    flex: 1;
-    order: 1;
+    border: 3px dotted #ccc;
+    padding: 20px;
+    margin: 20px 0;
+
 }
-.box-3{
-   flex: 1;
-   order: 3;
+/* Unorder list  */
+
+.categories{
+    border: 1px #ccc solid ;
+    padding: 10px;
+    border-radius: 15px;
 }
+.categories h2{
+    text-align: center;
+}
+.categories ul{
+    padding-left: 20px;
+    list-style: none;
+    
+}
+.categories li{
+    padding-bottom: 6px;
+    border-bottom: dotted 1px #333;
+    list-style-image:url('../img/check.png') ;
 
 
-.container-2-box{
-  flex-basis: 27%;
 }
-.container-3-box{
-  flex-basis: 30%;
-}
+/* Ordered list  */
+
+
+
+
+---------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
+    
+
+
+
+
 
