--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,9 +152,47 @@ a:visited{
     height: 500px;
     border: 1px solid #000;
     margin-top: 30px;
+    position: relative;
+    background-image:url(../img/nature.jpg);
+    background-position: 100px 200px ;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 .p-box h1{
-    
+    position: absolute;
+    top: 100px;
+    left: 200px;
+
+}
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+
+}
+.fix-me{
+    position: fixed;
+    top: 400px;
+}
+
+.my-list li:first-child{
+    background: red;
+
+}
+
+.my-list li:last-child{
+    background: blue;
+
+}
+
+.my-list li:nth-child(5){
+    background: yellow;
+}
+
+
+.my-list li:nth-child(even){
+    background: gray;
 }
 
 
