--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,37 @@ a:visited{
  
   
 }
+header h1{
+    text-align: center;
+    padding: 40px 0;
+}
+#navbar{
+    background: #333;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+
+}
+#navbar .container{
+    margin: 0;
+    padding: 0;
+
+}
+
+#navbar ul{
+
+    list-style: none;
+
+}
+#navbar ul li{
+    display: inline-block;
+    
+}
+#navbar ul li a{
+    color: #fff;
+    padding: 15px;
+    float: right;
+}
 .box-1{
     background-color:#333;
     color: #fff;
