--- a/Web-layout-style.css
+++ b/Web-layout-style.css
@@ -15,7 +15,7 @@ body{
 
 }
 #main-header{
-    background-color: coral;
+    background-color: yellowgreen;
     color: #fff;
 
 }
@@ -47,7 +47,7 @@ body{
     
 }
 #showcase{
-    background-image: url("../img/flower.jpg");
+    background-image: url("assets/img/flower.jpg");
     background-position: center right;
     min-height: 300px;
     margin-bottom: 30px;
