--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
 
 /* This is CSS crash course */
-/* *{ 
+ 
+*{ 
     margin:0;
     padding:0;
+    box-sizing: border-box;
 
 }
-*/
+
 body{
     background: #f4f4f4;
     color: #555;
@@ -47,22 +49,24 @@ a:visited{
  
   
 }
-header h1{
+.banner{
+    background: #333;
     text-align: center;
-    padding: 40px 0;
+    color: #fff;
+    padding: 50px 0;
+}
+.banner h1{
+    margin-bottom: 20px;
 }
 #navbar{
     background: #333;
     color: #fff;
     margin: 0;
     padding: 0;
+    float: right;  
 
 }
-#navbar.container{
-    margin: 0;
-    padding: 0;
 
-}
 
 #navbar ul{
 
@@ -75,9 +79,42 @@ header h1{
 }
 #navbar ul li a{
     color: #fff;
-    padding: 15px;
+    padding-right: 15px;
     float: right;
 }
+
+#html{
+    margin: 30px 0;
+    text-align: center;
+}
+#html h1{
+    padding: 50px 0;
+}
+#html h3 span{
+    color: red;
+   
+}
+.heading-box,.paragraph-box{
+ border: 1px dotted #555;
+ margin: 30px 0;
+ text-align: justify;
+ padding: 20px;
+ 
+
+}
+.paragraph-box{
+    margin-bottom: 30px;
+    margin-bottom: 30px;
+
+}
+.paragraph-box span{
+    color: red;
+}
+.header h1{
+    text-align: center;
+    padding: 40px 0;
+}
+
 .box-1{
     background-color:#333;
     color: #fff;
