--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,15 @@
     box-sizing: border-box;
 
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     background: #f4f4f4;
     color: #555;
-    /* font-family: Arial, Helvetica, sans-serif; 
-    font-size: 16px;
-    font-weight: normal;*/
     font: normal 16px Arial, Helvetica, sans-sarif;
-    line-height: 1.6em; 
+    line-height: 1.6em;
 }
 a{
     text-decoration: none;
@@ -50,10 +50,12 @@ a:visited{
   
 }
 .banner{
+    position: fixed;
+    width: 100%;
     background: #333;
     text-align: center;
     color: #fff;
-    padding: 50px 0;
+    padding: 20px 0;
 }
 .banner h1{
     margin-bottom: 20px;
