--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ font-weight: 600;
 .about-image{
     flex-basis: 40%;
     height: auto;
-    background-image: url(../img/road.jfif);
+    background-image: url(../img/kasem.jpg);
     background-size:cover;
     background-position: center;
     background-color: #fff;
