design a news section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,36 @@ body{
     font-family: 'Poppins', sans-serif;
     line-height: 1.6em;
 }
+.d-flex{
+    display: flex;
+}
+.flex-column{
+    flex-direction: column;
+}
+.flex-row{
+    flex-direction: row;
+}
+.align-items-center{
+    align-items: center;
+}
+.pdt-100{
+    padding-top: 100px;
+}
+.pdt-120{
+    padding-top: 120px;
+}
+
+.pdt-200{
+    padding-top: 200px;
+}
+.pb-100{
+    padding-bottom: 100px;
+}
+a{
+    text-decoration: none;
+}
+
+
 .section-bg{
     background-image: url(../img/header-bg.jpg);
     height: 100vh;
@@ -63,15 +93,10 @@ body{
 }
 .menu-area ul li a{
         color: #fff;
-        padding-right: 15px;
+        padding-right: 50px;
         float: right;
         text-decoration: none;
-}
-
-
-.menu-area ul li:first-child{
-  color: red;
-
+        text-transform: uppercase;
 }
 .menu-area ul li a:hover{
         color: #E63946;
@@ -145,8 +170,6 @@ body{
     background-size:cover;
     background-position: center;
     background-color: #fff;
-  
-
 }
 .reason-text{
     flex-basis: 40%;
@@ -179,8 +202,6 @@ body{
     height: 480px;
     position: relative;
     z-index: -1;
-
-
 }
 .sticky-bg:after{
     content: '';
@@ -227,20 +248,20 @@ body{
     max-width: 50%;
    
 }
-.gallery-image-1{
+.service-bg-1{
     background-image: url(../img/s1.jpg);
 }
-.gallery-image-2{
+.service-bg-2{
     background-image: url(../img/s2.jpg);
 }
-.gallery-image-3{
+.service-bg-3{
     background-image: url(../img/s3.jpg);
 }
-.gallery-image-4{
+.service-bg-4{
     background-image: url(../img/s4.jpg);
 }
 
-.gallery-property{
+.service-bg{
     flex-basis: 50%;
     height: 500px;
     margin: 30px 15px;
@@ -248,104 +269,32 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
     
 }
-.gallery-content:hover{
-    display: inline-block;
-}
-.gallery-content{
-    color: #fff;
-    text-align: center;    
+.service-area .service-bg .overlay-content{
     background: -moz-linear-gradient(-45deg,  rgba(46,34,158,0.93) 0%, rgba(169,84,199,0.84) 100%);
     background: -webkit-linear-gradient(-45deg,  rgba(46,34,158,0.93) 0%,rgba(169,84,199,0.84) 100%);
     background: linear-gradient(135deg,  rgba(46,34,158,0.93) 0%,rgba(169,84,199,0.84) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ed2e229e', endColorstr='#d6a954c7',GradientType=1 );
-    border:none; ;
-    height: 100%;
-    display: none;
-}
-.heading-box,.paragraph-box{
- border: 1px dotted #555;
- margin: 30px 0;
- text-align: justify;
- padding: 20px;
-}
-.paragraph-box{
-    margin-bottom: 30px;
-    margin-bottom: 30px;
-
-}
-.paragraph-box span{
-    color: red;
-}
-.header h1{
-    text-align: center;
-    padding: 40px 0;
-}
-
-.box-1{
-    background-color:#333;
+    opacity: 0;
+    width: 100%;
+    height: 0%;
     color: #fff;
-    padding: 30px;
-    text-align: justify;
-    border: 5px solid red;     
+    padding-top: 30px;
+    transition: .5s;
+    display: flex;
+    transform: scaleY(1);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
-    /* 
-    border-top-style:dotted; 
-    border-bottom-width:20px;
-    
-    */
-    /* margin-top: 20px; */
-    margin: 20px 0;
 }
-.box-1 h1{
-    font-family: Tahoma;
-    font-weight: 800px;
-    font-style: italic;
-    text-decoration: underline;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    word-spacing: 0.1em;  
-
-}
-.box-2{
-    border: 3px dotted #ccc;
-    padding: 20px;
-    margin: 20px 0;
-
-}
-/* Unorder list  */
-
-.categories{
-    border: 1px #ccc solid ;
-    padding: 10px;
-    border-radius: 15px;
-}
-.categories h2{
-    text-align: center;
-}
-.categories ul{
-    padding-left: 20px;
-    list-style: none;
-    
-}
-.categories li{
-    padding-bottom: 6px;
-    border-bottom: dotted 1px #333;
-    list-style-image:url('../img/check.png') ;
+.service-area .service-bg:hover .overlay-content{
+    opacity: 1;
+    height: 100%;
 
 
-}
-.my-form{
-    padding: 20px;
-    
-
-}
-.form-group{
-    padding-bottom: 15px;
-}
-.my-form label{
-    display: block;
 }
 .my-form input[type="text"], .my-form textarea{
    padding: 8px;
@@ -357,137 +306,42 @@ body{
     border: 1px solid #ccc;
     padding: 10px;
     box-sizing: border-box;
-
-
-
 }
-.clr{
-    clear:both;
-}
-
-
-/* Usees of  ID */
-#main-block{
-    float: left;
-    width: 70%;
-    box-sizing: border-box;
-}
-
-#side-bar{
-    float: right;
-    width: 30%;
-    background-color: #333;
-    color: #fff;
-    padding: 15px;
-    box-sizing: border-box;    
-
-}
-/* positioning */
-.p-box{
-    width: 800px;
-    height: 500px;
-    border: 1px solid #000;
-    margin-top: 30px;
+.newsletter-area input[type="mail"]{
+    display: inline-block;
+    width: 500px;
+    height: 52px;
+    border: 1px solid #333;
+    border-radius: 27px;
+    padding-left: 20px;
+    font-size: 22px;
     position: relative;
-    background-image:url(../img/nature.jpg);
-    background-position: 100px 200px ;
-    background-repeat: no-repeat;
-    background-position: center;
-
 }
-.p-box h1{
+.newsletter-area .boxed-btn{
     position: absolute;
-    top: 100px;
-    left: 200px;
-
+    right: 0;
 }
-.p-box h2{
-    position: absolute;
-    bottom: 40px;
-    right: 100px;
-
-}
-.fix-me{
-    position: fixed;
-    top: 400px;
-}
-
-.my-list li:first-child{
-    background: #e65f78 
-
-}
-
-.my-list li:last-child{
-    background: blue;
-
-}
-
-.my-list li:nth-child(5){
-    background: yellow;
-}
-
-
-.my-list li:nth-child(even){
-    background: gray;
-
-}
-.main-footer{
+.footer-area{
     background: #222222;
     padding: 100px 0;
     color: #fff;
-    text-align: center;
-  
     margin-top: 20px;
+    font-size: 14px;
 
 }
-.pdt-100{
-    padding-top: 100px;
-}
-.pdt-120{
-    padding-top: 120px;
-}
-
-.pdt-200{
-    padding-top: 200px;
-}
-script{
-    display: none;
+.footer-menu a{
+    display: inline-block;
+    padding-left: 40px;
+    color: #fff;
+    text-decoration: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
+.footer-area .footer-social{
+    margin: 30px 0;
     
-
-
-
-
-
+}
+.footer-area .footer-social a{
+    color: #fff;
+    padding-left: 15px;
+    
+}
